<resources>
    <string name="app_name">Workout Tracker</string>
    <string name="btn_txt_begin_workout">Begin Workout</string>
    <string name="btn_txt_edit_workout">Edit Workout</string>
    <string name="btn_txt_track_workout">Workout Tracker</string>
    <string name="btn_txt_settings">Settings</string>
    <string name="btn_txt_add_new_workout">Add new workout</string>
    <string name="btn_txt_close">Close</string>
    <string name="btn_txt_add">Add</string>
    <string name="tv_txt_workoutname">Workout Name</string>
    <string name="tv_txt_workoutdescription">Description</string>
    <string name="hint_et_workoutdescription">( Muscle groups, Length, etc.. )</string>
    <string name="toast_data_add_success">Data saved successfully</string>
    <string name="toast_data_add_failed">Failed to save data</string>
    <string name="toast_data_empty_field">Name field cannot be empty</string>
    <string name="btn_txt_add_new_drill">Add new drill</string>
    <string name="tv_txt_reps">Reps</string>
    <string name="tv_txt_sets">Sets</string>
    <string name="btn_txt_delete">Delete</string>
    <string name="toast_delete_success">Delete Successful</string>
    <string name="toast_delete_fail">Delete Failed</string>
    <string name="btn_txt_save">Save</string>
    <string name="btn_txt_cancel">Cancel</string>
    <string name="tv_txt_drill_name">Drill Name</string>
    <string name="tv_txt_select_workout">Select Your Workout</string>
    <string name="btn_txt_start">Start</string>
    <string name="btn_txt_pause">Pause</string>
    <string name="btn_txt_reset">Reset</string>
    <string name="btn_txt_next">Next</string>
    <string name="btn_txt_finish">Finish</string>
    <string name="tv_txt_drill_list">Drill List</string>
    <string name="tv_txt_current_drill">Current Drill</string>
    <string name="tv_txt_sets_remaining">Sets Remaining</string>
    <string name="btn_txt_yes">Yes</string>
    <string name="btn_txt_no">No</string>
    <string name="tv_txt_are_you_sure">Are you sure you would like to cancel the workout?</string>
    <string name="tv_txt_hint_progress_lost">(Progress will be lost)</string>
    <string name="tv_txt_drills_complete">Nice job! all drills have been completed.</string>
    <string name="tv_txt_hint_finish_workout">(would you like to finalize your workout?)</string>
    <string name="tv_txt_end_workout">Are you sure you would like to end your workout?</string>
    <string name="tv_txt_please_rate_workout">Please rate your workout below</string>
    <string name="btn_txt_submit">Submit</string>
    <string name="tv_txt_workout_summary">Workout Summary</string>
    <string name="tv_txt_date">Date</string>
    <string name="tv_txt_duration">Duration</string>
    <string name="tv_txt_your_rating">Your Rating</string>
    <string name="tv_txt_drills_completed">Drills Completed</string>
    <string name="tv_txt_share">Share</string>
</resources>