<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="65dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_begin"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_txt_begin_workout"
            android:background="@drawable/solidturqoise"/>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="7dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_txt_edit_workout"
            android:background="@drawable/solidturqoise"/>

        <Button
            android:id="@+id/btn_track"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="7dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_txt_track_workout"
            android:background="@drawable/solidturqoise"/>

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="7dp"
            android:layout_marginBottom="10dp"
            android:text="@string/btn_txt_settings"
            android:background="@drawable/solidturqoise"/>


    </LinearLayout>

</RelativeLayout>