<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="210dp"
    android:padding="30dp">

    <TextView
        android:id="@+id/tv_cancel_workout_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_txt_end_workout"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAlignment="center"/>

    <RelativeLayout
        android:id="@+id/rl_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/tv_cancel_workout_dialog"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/btn_txt_yes"
            android:layout_alignParentEnd="true"
            android:background="@drawable/solidturqoise"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:text="@string/btn_txt_no"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:background="@drawable/solidturqoise"
            android:layout_marginBottom="5dp"
            android:textSize="16sp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>

</RelativeLayout>