<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="410dp"
    android:background="@drawable/solidturqoise"
    android:padding="40dp">

    <TextView
        android:id="@+id/tv_drill_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_txt_drill_name"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        />

    <EditText
        android:id="@+id/et_drill_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_drill_name"
        android:background="#ffffff"
        android:layout_marginHorizontal="15sp"
        android:layout_marginTop="10sp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_drill_name"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/tv_drill_sets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_txt_sets"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_marginStart="25dp"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/tv_drill_reps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_txt_reps"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_marginStart="25dp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="25dp"/>

        <EditText
            android:id="@+id/et_drill_sets"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_drill_sets"
            android:background="#ffffff"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_alignParentLeft="true"/>

        <EditText
            android:id="@+id/et_drill_reps"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_drill_reps"
            android:background="#ffffff"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="30dp"/>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/layout_btn"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_close"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:paddingHorizontal="0dp"
            android:paddingVertical="10dp"
            android:text="@string/btn_txt_close"
            android:textColor="#000000"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:layout_toEndOf="@id/btn_close"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/btn_txt_add"
            android:textColor="#000000"
            android:textSize="25sp" />


    </RelativeLayout>

</RelativeLayout>