<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_workout_summary"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tv_txt_workout_summary"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_workout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Day A"
        android:textColor="#000000"
        android:layout_below="@id/tv_workout_summary"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="36sp"
        android:layout_marginTop="15dp" />

    <RelativeLayout
        android:id="@+id/rl_date_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_workout_name"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="20dp">

        <TextView
            android:id="@+id/tv_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="26sp"
            android:text="@string/tv_txt_date"
            android:layout_alignParentStart="true"
            android:layout_marginHorizontal="55dp"
            />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:text="12-jan-2020"
            android:layout_below="@id/tv_date_title"
            android:layout_alignParentStart="true"
            android:layout_marginStart="22dp"/>

        <TextView
            android:id="@+id/tv_duration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="26sp"
            android:text="@string/tv_txt_duration"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"/>

        <TextView
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:text="00:30:56"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_duration_title"
            android:layout_marginEnd="50dp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_your_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_txt_your_rating"
        android:textColor="#000000"
        android:layout_below="@id/rl_date_duration"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="20dp"/>

    <RatingBar
        android:id="@+id/ratingbar_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_your_rating"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:stepSize="0.5"
        android:progressTint="@color/colorPrimary"
        android:clickable="false"/>

    <RelativeLayout
        android:id="@+id/rl_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/ratingbar_workout">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:text="@string/btn_txt_cancel"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:background="@drawable/solidturqoise"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>


</RelativeLayout>