<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:background="@mipmap/ic_return"
        android:layout_marginHorizontal="10sp"
        android:layout_marginVertical="10sp"
        android:id="@+id/btn_return_info"/>

    <TextView
        android:id="@+id/tv_workout_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_txt_workoutname"
        android:layout_below="@id/btn_return_info"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_workout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_workout_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"/>

    <TextView
        android:id="@+id/tv_workout_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_txt_workoutdescription"
        android:layout_below="@id/et_workout_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:textSize="18sp"/>

    <EditText
        android:id="@+id/et_workout_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_workout_description"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"/>

    <Button
        android:id="@+id/btn_add_new_workout"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginHorizontal="10sp"
        android:layout_marginVertical="10sp"
        android:background="@drawable/addicon"
        android:layout_below="@id/et_workout_desc"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50sp"
        android:layout_marginVertical="10sp"
        android:layout_toRightOf="@id/btn_add_new_workout"
        android:layout_below="@id/et_workout_desc"
        android:gravity="center"
        android:text="@string/btn_txt_add_new_drill"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:id="@+id/tv_add_new_drill"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        android:layout_below="@id/tv_add_new_drill">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/ll_drill_list">



        </LinearLayout>

    </ScrollView>

</RelativeLayout>